--- a/.github/workflows/ci_cd.yaml
+++ b/.github/workflows/ci_cd.yaml
@@ -2,7 +2,7 @@ name: CI/CD Pipeline
 
 on:
   push:
-    branches: [ main ]  # Run on pushes to the main branch
+    branches: [ simple_core ]  # Run on pushes to the main branch
   pull_request:  # Optionally run on pull requests
 
 jobs:
@@ -20,24 +20,21 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install langchain streamlit streamlit_chat chromadb pypdf fastembed flake8 pytest
+          sudo apt install python3-virtualenv
+          virtualenv env
+          source env/bin/activate
+          pip3 install langchain streamlit streamlit_chat chromadb pypdf fastembed pytest
 
       - name: Install Ollama (adjust if using a different package manager)
         run: |
           curl -fsSL https://ollama.com/install.sh | sh
 
       - name: Pull Ollama mistral model
-        run: ollama pull mistral
+        run: |
+          ollama pull mistral
 
       - name: Run Super-Linter (highly recommended)
         uses: github/super-linter@v4
-        with:
-          # Optional: Specify custom Super-Linter flags (see https://github.com/github/super-linter)
-          # flags: '--format json'  # Example for JSON output
-
-      - name: Run linting (optional for additional checks)
-        run: flake8 .  # Run Flake8 in addition to Super-Linter
 
       - name: Run unit tests
         run: pytest  # Replace with your specific test commands if needed
